5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1712_2496.log
== TEST (2019-05-08 14:33:05) 
-- CODE:
num = int(input("numero:"))
s = 0
while (num != -1):
	s = s + num
	num = int(iput("numero:"))
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    num = int(iput("numero:"))
NameError: name 'iput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:33:17) 
-- CODE:
num = int(input("numero:"))
s = 0
while (num != -1):
	s = s + num
	num = int(input("numero:"))
print(s)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:33:27) 
-- CODE:
num = int(input("numero:"))
s = 0
while (num != -1):
	s = s + num
	num = int(input("numero:"))
print(s)
-- EXECUTION TIME:
0.166294
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:40:09) 
-- CODE:
num = int(input("numero:"))
s = 0
while (num != -1):
	s = s + num
	num = int(input("numero:"))
print(s)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:24:12) 
-- CODE:
n = int(input("n:"))

i = 0

while(n != -1):
	soma = n + i 
	i = i + 1
	print(soma)
-- OUTPUT:
-525
-524
-523
-522
-521
-520
-519
-518
-517
-516
-515
-514
-513
-512
-511
-510
-509
-508
-507
-506
-505
-504
-503
-502
-501
-500
-499
-498
-497
-496
-495
-494
-493
-492
-491
-490
-489
-488
-487
-486
-485
-484
-483
-482
-481
-480
-479
-478
-477
-476
-475
-474
-473
-472
-471
-470
-469
-468
-467
-466
-465
-464
-463
-462
-461
-460
-459
-458
-457
-456
-455
-454
-453
-452
-451
-450
-449
-448
-447
-446
-445
-444
-443
-442
-441
-440
-439
-438
-437
-436
-435
-434
-433
-432
-431
-430
-429
-428
-427
-426
-425
-424
-423
-422
-421
-420
-419
-418
-417
-416
-415
-414
-413
-412
-411
-410
-409
-408
-407
-406
-405
-404
-403
-402
-401
-400
-399
-398
-397
-396
-395
-394
-393
-392
-391
-390
-389
-388
-387
-386
-385
-384
-383
-382
-381
-380
-379
-378
-377
-376
-375
-374
-373
-372
-371
-370
-369
-368
-367
-366
-365
-364
-363
-362
-361
-360
-359
-358
-357
-356
-355
-354
-353
-352
-351
-350
-349
-348
-347
-346
-345
-344
-343
-342
-341
-340
-339
-338
-337
-336
-335
-334
-333
-332
-331
-330
-329
-328
-327
-326
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:25:35) 
-- CODE:
n = int(input("n:"))

i = 0

while(n != -1):
	soma = n + i 
print(soma)
	n = int(input("n:"))
-- ERROR:
File "XXXX", line 8
    n = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:25:41) 
-- CODE:
n = int(input("n:"))

i = 0

while(n != -1):
	soma = n + i 
print(soma)
n = int(input("n:"))
-- ERROR:
File "XXXX", line 8
    n = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:25:55) 
-- CODE:
n = int(input("n:"))

i = 0

while(n != -1):
	soma = n + i 
	n = int(input("n:"))
print(soma)

-- OUTPUT:
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:28:06) 
-- CODE:
n = int(input("n:"))

i = 0

while(n != -1):
	soma = i + n
	n = int(input("n:"))
print(soma)

-- OUTPUT:
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 12:28:34) 
-- CODE:
n = int(input("n:"))

i = 0

while(n != -1):
	soma = i + n
	n = int(input("n:"))
print(soma)

-- EXECUTION TIME:
0.189285
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-9
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
-10953
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:30:40) 
-- CODE:
n = int(input("n:"))
i = 0
while(n != -1):
	soma = i + n
	n = int(input("n:"))
print(soma)

-- OUTPUT:
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
